# mdhe-ko-music

client/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
client/src/: App.tsx  main.tsx
client/src/assets/: liked.png:Zone.Identifier
client/src/components/: AddToPlButton.tsx  GlobalContext.tsx  LikeButton.tsx  ModalWithBackdrop.tsx  RemoveFromPlButton.tsx  Spinner.tsx
client/src/pages/: CreatePlaylist.tsx  Layout.tsx  Library.tsx  LikedSongs.tsx  form.tsx  home.tsx  login.tsx  search.tsx  signup.tsx
server/: .env  .gitignore  Cargo.toml
server/migrations/2023-05-16-102547_create_users/: down.sql  up.sql
server/migrations/2023-05-16-161646_change_Table_name/: down.sql  up.sql
server/migrations/2023-05-28-135109_like-songs/: down.sql  up.sql
server/migrations/2023-05-28-141404_remove nullable/: down.sql  up.sql
server/migrations/2023-06-03-092617_playlist/: down.sql  up.sql
server/migrations/2023-06-04-170157_add-song-count-to-pl/: down.sql  up.sql
server/src/: lib.rs  main.rs  models.rs  schema.rs
