[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-easy-multipart = "3.0.0"
actix-multipart = "0.6.0"
actix-web = "4"
bytes = { version = "1.4.0", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql"] }
dotenvy = "0.15"
futures-util = "0.3.28"
mime = "0.3.17"
rusty_ytdl = "0.5.0"
serde = { version = "1.0.163", features = ["derive", "serde_derive"] }
sha256 = "1.1.3"
uuid = { version = "1.3.3", features = ["v4"] }
